syntax = "proto3";

package transaction;
option go_package = "github.com/figment-networks/oasis-rpc-proxy/grpc/transaction/transactionpb";

message Transaction {
	bool success = 1;
	bool signature_verified = 2;
	bool sanity_checked = 3;
	string hash = 4;
	string public_key = 5;
	string signature = 6;
	uint64 nonce = 7;
	bytes fee = 8;
	uint64 gas_limit = 9;
	bytes gas_price = 10;
	string method = 11;
}

message GetByHeightRequest {
    int64 height = 1;
}

message GetByHeightResponse {
   repeated Transaction transactions = 1;
}

service TransactionService {
    rpc GetByHeight (GetByHeightRequest) returns (GetByHeightResponse) {};
}